# Nexel-Pro

./: .gitignore  CLAUDE_PROJECT.md  EXCEL_FEATURES.md  EXCEL_UX_REFERENCE.md  ROADMAP.md  ROADMAP_M1_TASKS.md  package-lock.json  package.json
.github/workflows/: release.yml
client/: package.json
client/public/: index.html
client/src/: App.css  App.tsx  AppRouter.tsx  index.tsx
client/src/components/: Cell.tsx  ChartOverlay.tsx  ChartPanel.tsx  ChatPanel.tsx  ConditionalFormatDialog.tsx  DocumentList.tsx  DocumentTitle.tsx  FormulaAutocomplete.tsx  FormulaBar.tsx  PivotTableDialog.tsx  SheetTabs.tsx  SpreadsheetGrid.tsx  TableFilterDropdown.tsx  Toolbar.tsx  VersionHistoryDialog.tsx
client/src/hooks/: useAutoSave.ts  useChat.ts  useSpreadsheet.ts
client/src/services/: documentApi.ts
client/src/types/: chart.ts  pivot.ts  spreadsheet.ts
client/src/utils/: actionApplier.ts  cellRange.ts  conditionalFormatting.ts  csvHandler.ts  documentSerializer.ts  fillSeries.ts  formulaEngine.ts  numberFormat.ts  pivotEngine.ts  tableUtils.ts
native/: CMakeLists.txt
native/benchmarks/: bench_xlsx_streaming.cpp  benchmark_20m.cpp  stress_test.cpp
native/resources/: AppIcon.icns  generate_icon.py
native/src/: main.cpp
native/src/core/: Cell.cpp  Cell.h  CellProxy.h  CellRange.cpp  CellRange.h  ColumnStore.cpp  ColumnStore.h  ConditionalFormatting.cpp  ConditionalFormatting.h  DependencyGraph.cpp  DependencyGraph.h  DocumentTheme.cpp  DocumentTheme.h  FilterEngine.cpp  FilterEngine.h  FormulaAST.cpp  FormulaAST.h  FormulaEngine.cpp  FormulaEngine.h  FormulaFunctions.cpp  FormulaFunctions2.cpp  FormulaFunctions3.cpp  FormulaFunctions4.cpp  FormulaFunctions5.cpp  FormulaFunctionsBatch5.cpp  FormulaMetadata.h  MacroEngine.cpp  MacroEngine.h  NamedRange.h  NumberFormat.cpp  NumberFormat.h  PivotEngine.cpp  PivotEngine.h  RecalcScheduler.cpp  RecalcScheduler.h  SparklineConfig.h  Spreadsheet.cpp  Spreadsheet.h  StringPool.cpp  StringPool.h  (+5 more)
native/src/database/: DatabaseManager.cpp  DocumentRepository.cpp  DocumentRepository.h
native/src/io/: ZipStreamReader.cpp  ZipStreamReader.h  ZipStreamWriter.cpp  ZipStreamWriter.h
native/src/services/: AutoSaveService.cpp  AutoSaveService.h  CsvService.cpp  CsvService.h  IncrementalSaveService.cpp  IncrementalSaveService.h  XlsxService.cpp  XlsxService.h
native/src/ui/: CellDelegate.cpp  CellDelegate.h  ChartDialog.cpp  ChartDialog.h  ChartPropertiesPanel.cpp  ChartPropertiesPanel.h  ChartWidget.cpp  ChartWidget.h  ChatPanel.cpp  ChatPanel.h  ConditionalFormatDialog.cpp  DataValidationDialog.cpp  DataValidationDialog.h  FindReplaceDialog.cpp  FindReplaceDialog.h  FormatCellsDialog.cpp  FormatCellsDialog.h  FormulaBar.cpp  FormulaBar.h  FormulaPopupDelegate.h  FunctionBrowserDialog.cpp  FunctionBrowserDialog.h  GoToDialog.cpp  GoToSpecialDialog.cpp  GoToSpecialDialog.h  GoalSeekDialog.cpp  GoalSeekDialog.h  GridCanvasView.cpp  GridCanvasView.h  ImageWidget.cpp  ImageWidget.h  MacroEditorDialog.cpp  MacroEditorDialog.h  MainWindow.cpp  MainWindow.h  NativeChartWidget.h  NativeChartWidget.mm  PageSetupDialog.cpp  PageSetupDialog.h  PasteSpecialDialog.cpp  (+24 more)
native/tests/: test_all.cpp  test_behavior.cpp  test_e2e.cpp  test_regression.cpp  test_ui.cpp  test_zipstream.cpp
server/: package.json
server/src/: index.ts
server/src/db/: database.ts
server/src/prompts/: systemPrompt.ts
server/src/repositories/: documentRepository.ts  documentVersionRepository.ts
server/src/routes/: chat.ts  documents.ts
server/src/services/: claudeService.ts
